--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -20,5 +21,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "global": "^4.4.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
